backend/TempExecution/f7d0707618104d7ab59c69de79216527_output.txt
f7d0707618104d7ab59c69de79216527.cpp: In function 'int main()':
f7d0707618104d7ab59c69de79216527.cpp:13:5: error: 'cin' was not declared in this scope; did you mean 'std::cin'?
In file included from C:/msys64/ucrt64/include/c++/14.1.0/x86_64-w64-mingw32/bits/stdc++.h:146,
                 from f7d0707618104d7ab59c69de79216527.cpp:1:
C:/msys64/ucrt64/include/c++/14.1.0/iostream:62:18: note: 'std::cin' declared here
   62 |   extern istream cin;           ///< Linked to standard input
      |                  ^~~
f7d0707618104d7ab59c69de79216527.cpp:15:5: error: 'cout' was not declared in this scope; did you mean 'std::cout'?
C:/msys64/ucrt64/include/c++/14.1.0/iostream:63:18: note: 'std::cout' declared here
   63 |   extern ostream cout;          ///< Linked to standard output
      |                  ^~~~
